@@ -4,17 +4,19 @@ namespace __appbase;
 
 final class de_DE_nls extends nls
 {
-  public function __construct()
-  {
-    $this->_fullname = 'German';
-    $this->_display = 'Deutsch';
-    $this->_isocode = 'de';
-    $this->_locale = 'de_DE';
-    $this->_encoding = 'UTF-8';
-    $this->_aliases = 'german,de_DE.ISO8859-1';
-  }
 
-  
+	public function __construct()
+	{
+		$this->_fullname = 'German';
+		$this->_display = 'Deutsch';
+		$this->_isocode = 'de';
+		$this->_locale = 'de_DE';
+ 		$this->_encoding = 'UTF-8';
+		$this->_aliases = 'german,de_DE.ISO8859-1';
+	}
+
 } // end of class
 
-?>
+#
+# EOF
+#
