@@ -2,19 +2,21 @@
 
 namespace __appbase;
 
-class en_US_nls extends nls
+final class en_US_nls extends nls
 {
-  public function __construct()
-  {
-    $this->_fullname = 'English';
-	
-    $this->_isocode = 'en';
-    $this->_locale = 'en_US';
-    $this->_encoding = 'UTF-8';
-    $this->_aliases = 'english,eng,en_CA,en_GB,en_US.ISO8859-1';
-  }  
 
-  public function foo() { return 1; }
+    public function __construct()
+    {
+        $this->_fullname = 'English';
+
+        $this->_isocode = 'en';
+        $this->_locale = 'en_US';
+        $this->_encoding = 'UTF-8';
+        $this->_aliases = 'english,eng,en_CA,en_GB,en_US.ISO8859-1';
+    }
+
 } // end of class
 
-?>
+#
+# EOF
+#
