@@ -4,17 +4,19 @@ namespace __appbase;
 
 final class nb_NO_nls extends nls
 {
-  public function __construct()
-  {
-    $this->_fullname = 'Norwegian bokmål';
-    $this->_display = 'Norsk bokmål';
-    $this->_isocode = 'nb';
-    $this->_locale = 'nb_NO';
-    $this->_encoding = 'UTF-8';
-    $this->_aliases = 'nb_NO.utf8,nb_NO.utf-8,nb_NO.UTF-8,nb_NO,nb_NO.ISO8859-1,nb_NO.ISO8859-15,norwegian,Norwegian_Norway.1252';
-  }  
-  
+
+	public function __construct()
+	{
+		$this->_fullname = 'Norwegian bokmål';
+		$this->_display = 'Norsk bokmål';
+		$this->_isocode = 'nb';
+		$this->_locale = 'nb_NO';
+		$this->_encoding = 'UTF-8';
+		$this->_aliases = 'nb_NO.utf8,nb_NO.utf-8,nb_NO.UTF-8,nb_NO,nb_NO.ISO8859-1,nb_NO.ISO8859-15,norwegian,Norwegian_Norway.1252';
+	}  
   
 } // end of class
 
-?>
+#
+# EOF
+#
