@@ -4,17 +4,19 @@ namespace __appbase;
 
 final class nl_NL_nls extends nls
 {
-  public function __construct()
-  {
-    $this->_fullname = 'Dutch';
-    $this->_display = 'Nederlands';
-    $this->_isocode = 'nl';
-    $this->_locale = 'nl_NL';
-    $this->_encoding = 'UTF-8';
-    $this->_aliases = 'dutch,nl_NL.ISO8859-1';
-  }  
-  
+
+	public function __construct()
+	{
+		$this->_fullname = 'Dutch';
+		$this->_display = 'Nederlands';
+		$this->_isocode = 'nl';
+		$this->_locale = 'nl_NL';
+		$this->_encoding = 'UTF-8';
+		$this->_aliases = 'dutch,nl_NL.ISO8859-1';
+	}
   
 } // end of class
 
-?>
+#
+# EOF
+#
