@@ -4,17 +4,19 @@ namespace __appbase;
 
 final class pt_PT_nls extends nls
 {
-  public function __construct()
-  {
-    $this->_fullname = 'Portuguese';
-    $this->_display = 'Portugu&ecirc;s';
-    $this->_isocode = 'pt';
-    $this->_locale = 'pt_PT';
-    $this->_encoding = 'UTF-8';
-    $this->_aliases = 'portugguese,pt_PT.ISO8859-1';
-  }  
-  
-  
+
+	public function __construct()
+	{
+		$this->_fullname = 'Portuguese';
+		$this->_display = 'Portugu&ecirc;s';
+		$this->_isocode = 'pt';
+		$this->_locale = 'pt_PT';
+		$this->_encoding = 'UTF-8';
+		$this->_aliases = 'portugguese,pt_PT.ISO8859-1';
+	}
+
 } // end of class
 
-?>
+#
+# EOF
+#
