@@ -1,0 +1,22 @@
+<?php
+
+namespace __appbase;
+
+final class ru_RU_nls extends nls
+{
+
+	public function __construct()
+	{
+		$this->_fullname = 'Русский';
+
+		$this->_isocode = 'ru';
+		$this->_locale = 'ru_RU';
+		$this->_encoding = 'UTF-8';
+		$this->_aliases = 'russian,ru,ru_RU,ru_RU.ISO3166-2';
+	}
+
+} // end of class
+
+#
+# EOF
+#
